
syntax = "proto3";

package room;

import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/timestamp.proto";

// Generated according to https://cloud.google.com/apis/design/standard_methods
service RoomService {
  rpc ListRooms(ListRoomsRequest) returns (ListRoomsResponse) {
  }

  rpc GetRoom(GetRoomRequest) returns (Room) {
  }

  rpc CreateRoom(CreateRoomRequest) returns (Room) {
  }

  rpc UpdateRoom(UpdateRoomRequest) returns (Room) {
  }

  rpc DeleteRoom(DeleteRoomRequest) returns (google.protobuf.Empty) {
  }
}

message Room {
  string id = 1;
  string name = 2;
  string owner = 3;
  string space_id = 4;
  string description = 5;
  repeated string participants = 6;
  repeated string keys_rotation = 7; // Keys rotation messages ids, sorted by created_at, for performance reasons 
  google.protobuf.Timestamp created_at = 99;
}

message ListRoomsRequest {
  // The parent resource name, for example, "shelves/shelf1"
  string parent = 1;

  // The maximum number of items to return.
  int32 page_size = 2;

  // The next_page_token value returned from a previous List request, if any.
  string page_token = 3;
}

message ListRoomsResponse {
  // The field name should match the noun "Room" in the method name.
  // There will be a maximum number of items returned based on the page_size field in the request.
  repeated Room rooms = 1;

  // Token to retrieve the next page of results, or empty if there are no more results in the list.
  string next_page_token = 2;
}

message GetRoomRequest {
  // The field will contain name of the resource requested.
  string name = 1;
  
  google.protobuf.FieldMask field_mask = 2;
}

message CreateRoomRequest {
  // The Room resource to create.
  // The field name should match the Noun in the method name.
  Room room = 3;
}

message UpdateRoomRequest {
  // The Room resource which replaces the resource on the server.
  Room room = 1;

  google.protobuf.FieldMask field_mask = 2;
}

message DeleteRoomRequest {
  // The resource name of the Room to be deleted.
  string id = 1;
}

// Generated according to https://cloud.google.com/apis/design/standard_methods
service MessageService {
  rpc ListMessages(ListMessagesRequest) returns (ListMessagesResponse) {
  }

  rpc SendMessage(SendMessageRequest) returns (google.protobuf.Empty) {
  }

  rpc AcknowledgeMessage(AcknowledgeMessageRequest) returns (google.protobuf.Empty) {
  }

  rpc UpdateMessage(UpdateMessageRequest) returns (Message) {
  }

  rpc DeleteMessage(DeleteMessageRequest) returns (google.protobuf.Empty) {
  }

  rpc ListThreadMessages (ListThreadMessagesRequest) returns (ListMessagesResponse);
}

message Message {
  string id = 1;
  string sender = 2;
  string room_id = 3;
  oneof body {
    PlainBody plain = 8;
    KeysRotation keys_rotation = 9;
  }
  optional Thread thread = 4;
  map<string, sint64> read_by = 5; // Map<user_id, read_at>
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message PlainBody {
  bytes content = 1;
  repeated string attachments = 2;
}

message Thread {
  string id = 1;
  repeated string participants = 2;
}

message KeysRotation {
  map<string, bytes> keys = 1;
  KeysRotationKind kind = 2; 
}

enum KeysRotationKind {
  JOIN = 0;
  LEAVE = 1;
}

message ListMessagesRequest {
  // The maximum number of items to return.
  int32 page_size = 1;

  // The next_page_token value returned from a previous List request, if any.
  string page_token = 2;

  string room_id = 3;

  google.protobuf.Timestamp from_date = 4;

  google.protobuf.FieldMask field_mask = 5;
}

message ListThreadMessagesRequest {
  ListMessagesRequest request = 1;
  string thread_id = 2;
}

message AcknowledgeMessageRequest {
  string message_id = 1;
}

message ListMessagesResponse {
  // The field name should match the noun "Message" in the method name.
  // There will be a maximum number of items returned based on the page_size field in the request.
  repeated Message Messages = 1;

  // Token to retrieve the next page of results, or empty if there are no more results in the list.
  string next_page_token = 2;
}

message GetMessageRequest {
  // The id of the resource requested.
  string id = 1;
}

message SendMessageRequest {
  // The Message resource to create.
  // The field name should match the Noun in the method name.
  Message Message = 3;
}

message UpdateMessageRequest {
  // The Message resource which replaces the resource on the server.
  Message Message = 1;

  // The update mask applies to the resource. For the `FieldMask` definition,
  // see https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#fieldmask
  google.protobuf.FieldMask field_mask = 2;
}

message DeleteMessageRequest {
  // The id of the Message to be deleted.
  string id = 1;
}

// Generated according to https://cloud.google.com/apis/design/standard_methods
service SpaceService {
  rpc ListSpaces(ListSpacesRequest) returns (ListSpacesResponse) {
  }

  rpc GetSpace(GetSpaceRequest) returns (Space) {
  }

  rpc CreateSpace(CreateSpaceRequest) returns (Space) {
  }

  rpc UpdateSpace(UpdateSpaceRequest) returns (Space) {
  }

  rpc DeleteSpace(DeleteSpaceRequest) returns (google.protobuf.Empty) {
  }
}

// TODO: Need a service for this message
message Space {
  string id = 1;
  string title = 2;
  string description = 3;
  repeated Room rooms = 4;
  repeated string participants = 5;
  google.protobuf.Timestamp created_at = 99;
}

message ListSpacesRequest {
  // The parent resource name, for example, "shelves/shelf1"
  string parent = 1;

  // The maximum number of items to return.
  int32 page_size = 2;

  // The next_page_token value returned from a previous List request, if any.
  string page_token = 3;
}

message ListSpacesResponse {
  // The field name should match the noun "Space" in the method name.
  // There will be a maximum number of items returned based on the page_size field in the request.
  repeated Space Spaces = 1;

  // Token to retrieve the next page of results, or empty if there are no more results in the list.
  string next_page_token = 2;
}

message GetSpaceRequest {
  // The field will contain name of the resource requested.
  string name = 1;

  google.protobuf.FieldMask field_mask = 2;
}

message CreateSpaceRequest {
  // The parent resource name where the Space is to be created.
  string parent = 1;

  // The Space id to use for this Space.
  string Space_id = 2;

  // The Space resource to create.
  // The field name should match the Noun in the method name.
  Space Space = 3;
}

message UpdateSpaceRequest {
  // The Space resource which replaces the resource on the server.
  Space Space = 1;

  // The update mask applies to the resource. For the `FieldMask` definition,
  // see https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#fieldmask
  google.protobuf.FieldMask field_mask = 2;
}

message DeleteSpaceRequest {
  // The resource name of the Space to be deleted.
  string id = 1;
}
